# pyopinions

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: release.yaml  test-release.yaml
opinions/: __init__.py  cli.py  opinion_mypy.py  opinion_poetry_dynamic_version.py  opinion_ruff.py  opinion_ruff_vscode.py
